--- a/website/index.html
+++ b/website/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Armin Dinand Versteeg</title>
+        <link rel="icon" type="image/x-icon" href="images/profile.png">
 
         <!-- Bootstrap -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
@@ -21,8 +22,8 @@
         <header class="container mt-4">
             <div class="header-wrapper d-flex justify-content-between align-items-center rounded-4 p-3 px-4">
                 <div class="d-flex align-items-center gap-4">
-                    <img src="images/profile.png" alt="Profile" class="rounded-circle" style="width: 40px; height: 40px;" />
-                    <nav class="d-flex gap-3">
+                    <nav class="d-flex gap-3 align-items-center">
+                        <a href="#"><img src="images/profile.png" alt="Profile" class="rounded-circle" style="width: 40px; height: 40px;" /></a>
                         <a href="#" class="fw-bold text-light text-decoration-none">Home</a>
                         <a href="#" class="text-secondary text-decoration-none">Projects</a>
                         <a href="#" class="text-secondary text-decoration-none">CV <sup>↗</sup></a>
