--- a/website/index.html
+++ b/website/index.html
@@ -20,16 +20,16 @@
 
     <body>
         <header class="container mt-4">
-            <div class="header-wrapper d-flex justify-content-between align-items-center rounded-4 p-3 px-4">
-                <div class="d-flex align-items-center gap-4">
+            <div class="header-wrapper row justify-content-between align-items-center rounded-4 p-3 px-4">
+                <div class="col-md-4 col-12 align-items-center gap-4">
                     <nav class="d-flex gap-3 align-items-center">
-                        <a href="#"><img src="images/profile.png" alt="Profile" class="rounded-circle" style="width: 40px; height: 40px;" /></a>
-                        <a href="#" class="fw-bold text-light text-decoration-none">Home</a>
-                        <a href="#" class="text-secondary text-decoration-none">Projects</a>
-                        <a href="#" class="text-secondary text-decoration-none">CV <sup>↗</sup></a>
+                        <a href="/"><img src="images/profile.png" alt="Profile" class="rounded-circle" style="width: 40px; height: 40px;" /></a>
+                        <a href="/" class="fw-bold text-light text-decoration-none">Home</a>
+                        <a href="/profile.html" class="text-secondary text-decoration-none">Projects</a>
+                        <a href="/?" class="text-secondary text-decoration-none">CV <sup>↗</sup></a>
                     </nav>
                 </div>
-                <div class="d-flex align-items-center gap-3">
+                <div class="col-md-8 col-12 text-md-end gap-3">
                     <a href="mailto:armin.versteeg@outlook.com" class="header-icon mt-1"><img src="icons/email.svg" alt="Email" width="35" /></a>
                     <a href="https://www.linkedin.com/in/armin-versteeg-112684192/" target="_blank" class="header-icon"><img src="icons/linkedin.svg" alt="LinkedIn" width="25" /></a>
                     <a href="https://github.com/ArminVersteeg" target="_blank" class="header-icon"><img src="icons/github.svg" alt="GitHub" width="27" /></a>
@@ -40,13 +40,14 @@
         <div class="page-wrapper container mt-4">
             <section class="title mt-5 mb-5 container">
                 <div class="row">
-                    <div class="col-2">
+                    <div class="col-12 col-md-3 col-lg-2 text-center mb-3 mb-md-0">
                         <img src="images/profile.png" alt="Profile" class="profile-picture" style="width: 125px; height: 125px;" />
                     </div>
-                    <div class="col-8 d-flex align-items-center">
+                    <div class="col-12 col-md-8 d-flex align-items-center justify-content-center justify-content-md-start">
                         <div>
                             <h1 class="my-name lh-1">Armin Dinand Versteeg</h1>
-                            <p class="current-position lh-1">WordPress developer @ 
+                            <p class="current-position lh-1">
+                                WordPress developer @ 
                                 <a class="link-light" href="https://www.heditex.com/nl" target="_blank">Heditex B.V.</a>
                             </p>
                         </div>
@@ -58,7 +59,6 @@
                 <div class="trypewriter-container">  
                      <p class="typewriter" data-typewriter='["👋 Hello World!", "👋 Hello there! I am Armin."]'></p>
                 </div>
-               
                 <p>
                     I'm currently a passionate Intern Software Developer at
                     <a class="link-light" href="https://www.heditex.com/nl" target="_blank">Heditex B.V.</a> 
@@ -125,13 +125,13 @@
                     </div>                   
                 </div>
             </section>
-
+            
             <section class="projects container mb-5">
                 <h3 class="h5">Recent projects</h3>
                 <div id="projects"></div>
             </section>
         </div>
-        <!-- Bootstrap JS -->
+        <!-- Load JS -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
         <script src="js/typewriter.js"></script>
         <script src="js/projects.js"></script>
