--- a/website/index.html
+++ b/website/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Armin Dinand Versteeg</title>
-        <link rel="icon" type="image/x-icon" href="images/profile.png">
+        <link rel="icon" type="image/x-icon" href="images/favicon.png">
 
         <!-- Bootstrap -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
@@ -23,10 +23,10 @@
             <div class="header-wrapper row justify-content-between align-items-center rounded-4 p-3 px-4">
                 <div class="col-md-4 col-12 align-items-center gap-4">
                     <nav class="d-flex gap-3 align-items-center">
-                        <a href="/"><img src="images/profile.png" alt="Profile" class="rounded-circle" style="width: 40px; height: 40px;" /></a>
-                        <a href="/" class="fw-bold text-light text-decoration-none">Home</a>
-                        <a href="/profile.html" class="text-secondary text-decoration-none">Projects</a>
-                        <a href="/?" class="text-secondary text-decoration-none">CV <sup>↗</sup></a>
+                        <a href="/"><img src="images/profile.jpg" alt="Profile" class="rounded-circle" style="width: 40px; height: 40px;" /></a>
+                        <a href="/" class="header-item fw-bold text-light text-decoration-none">Home</a>
+                        <a href="/profile.html" class="header-item text-secondary text-decoration-none">Projects</a>
+                        <a href="resume/cv-en.pdf" target="_blank"href="resume/cv-en.pdf" target="_blank" class="header-item text-secondary text-decoration-none">CV <sup>↗</sup></a>
                     </nav>
                 </div>
                 <div class="col-md-8 col-12 text-md-end gap-3">
@@ -41,7 +41,7 @@
             <section class="title mt-5 mb-5 container">
                 <div class="row">
                     <div class="col-12 col-md-3 col-lg-2 text-center mb-3 mb-md-0">
-                        <img src="images/profile.png" alt="Profile" class="profile-picture" style="width: 125px; height: 125px;" />
+                        <img src="images/profile.jpg" alt="Profile" class="profile-picture" style="width: 125px; height: 125px;" />
                     </div>
                     <div class="col-12 col-md-8 d-flex align-items-center justify-content-center justify-content-md-start">
                         <div>
@@ -57,20 +57,19 @@
 
             <section class="container intro mb-5">
                 <div class="trypewriter-container">  
-                     <p class="typewriter" data-typewriter='["👋 Hello World!", "👋 Hello there! I am Armin."]'></p>
+                     <p class="typewriter" data-typewriter='["👋 Hello World!", "👋 Hello there! My name is Armin."]'></p>
                 </div>
                 <p>
                     I'm currently a passionate Intern Software Developer at
-                    <a class="link-light" href="https://www.heditex.com/nl" target="_blank">Heditex B.V.</a> 
+                    <a class="link-light" href="https://www.heditex.com/nl" target="_blank">Heditex B.V.</a>, 
                     while completing my MBO Niveau 4 at Da Vinci College, Dordrecht, 
-                    Based in the Randstad area of The Netherlands. I'm dedicated to refining my technical skills 
+                    based in the Randstad area of The Netherlands. I'm dedicated to refining my technical skills 
                     and applying them in real-world engineering environments.
                 </p>
                 <p>
-                    I also have a huge passion for the hardware side of technology. I am certified
-                    by MediaMarkt Nederland to repair broken devices such as phones, tablets, and
-                    computers. I also enjoy building computers in my free time and like to tinker with making
-                    my own Linux-based servers.
+                    I also have a strong passion for the hardware side of technology. 
+                    I'm certified by MediaMarkt Nederland to repair broken devices such as phones, tablets, and computers.
+                    In my free time, I enjoy building PCs and experimenting with Linux-based servers.
                 </p>
             </section>
 
@@ -108,7 +107,7 @@
                 <h3 class="h5">Want to learn more about me?</h3>
                 <div class="row d-flex flex-wrap gap-3 mt-2 m-0">
                     <div class="p-0 col">
-                        <a href="#" class="d-flex justify-content-between btn custom-button">
+                        <a href="resume/cv-en.pdf" target="_blank" class="d-flex justify-content-between btn custom-button">
                             <div class="d-flex align-items-center">
                                 <img class="white-icon me-2" src="icons/cv.svg" alt="Email" width="20" /> Open English CV
                             </div> 
@@ -116,7 +115,7 @@
                         </a>
                     </div>
                     <div class="p-0 col">
-                        <a href="#" class="d-flex justify-content-between btn custom-button">
+                        <a href="resume/cv-nl.pdf" target="_blank" class="d-flex justify-content-between btn custom-button">
                             <div class="d-flex align-items-center">
                                 <img class="white-icon me-2" src="icons/cv.svg" alt="LinkedIn" width="20" /> Open Nederlands CV
                             </div> 
